--- a/biome.json
+++ b/biome.json
@@ -30,5 +30,14 @@
         "organizeImports": "on"
       }
     }
+  },
+  "css": {
+    "parser": {
+      "tailwindDirectives": true
+    },
+    "formatter": {
+      "indentWidth": 4,
+      "indentStyle": "space"
+    }
   }
 }
