--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/node": "^25.0.3",
     "@typescript/native-preview": "7.0.0-dev.20251220.1",
     "jsdom": "^27.4.0",
+    "solid-devtools": "^0.34.4",
     "tailwindcss": "^4.1.18",
     "typescript": "^5.9.3",
     "vite": "8.0.0-beta.3",
